# quant-gym-openenv

./:  task1_grader.py   task2_grader.py   task3_grader.py  =0.2.0  Dockerfile  LICENSE  README.md  __init__.py  inference.py  models.py  openenv.yaml  pre_validation.sh  pyproject.toml  requirements.txt
graders/: __init__.py  task1_grader.py  task2_grader.py  task3_grader.py
server/: Dockerfile  app.py  environment.py
server/data/: download_data.py  news.json  prices.csv
server/data/server/data/: prices.csv
